kubernetes/apps/kube-system/cilium/netpols/ingress-from-prometheus.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
# Ingress from prometheus (label ingress.home.arpa/allow-prometheus="true").
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-from-prometheus
spec:
  endpointSelector:
    matchLabels:
      ingress.home.arpa/allow-prometheus: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            app.kubernetes.io/name: prometheus
